# pyasp

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  asp.yml  config.yaml  dummy.ipynb  pyproject.toml  stereo.default
.github/workflows/: pre-commit.yml
examples/: dummy.ipynb
pyASP/: __init__.py  asp.py  pipeline.py  pipelinebase.py  spot5pipeline.py
pyASP/utils/: logger.py  processes.py  utils.py
pyasp/: __init__.py  asp.py  pipeline.py  spot5pipeline.py  steps.py
pyasp/utils/: shell.py  utils.py
scripts/: aletch_asp.sh
tests/: test_utils.py
