[build-system]
requires      = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyasp"
version = "0.0.1"
description = ""
readme = "README.md"
authors = [
    { name = "Francesco Ioli", email = "francesco.ioli@polimi.it" },
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT license ",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = []
dependencies = [
    "numpy",
    "matplotlib",
    "pandas",
    "opencv-python",
    "opencv-contrib-python",
]
requires-python = ">=3.10"


[project.optional-dependencies]
dev = [
    "flake8",
    "black",
    "bumpver",
    "isort",
    "pip-tools",
    "pytest",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "pre-commit",
]

[project.urls]
Homepage = "https://github.com/franioli/pyASP"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.isort]
profile = "black"

[tool.bumpver]
current_version = "0.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
"pyasp/__init__.py" = [
    "{version}"
]
